typescript/checker/tests/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            183,
        ),
        hi: BytePos(
            184,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts:10:5
   |
10 | var f: I;
   |     ^

